# rosu-pp-java

./: .gitignore  README.md  mvnw  mvnw.cmd  pom.xml  rust-toolchain.toml
.github/workflows/: build.yml
native/: ABI.md  Cargo.toml
native/crates/backend-202411/: Cargo.toml
native/crates/backend-202411/src/: lib.rs
native/crates/backend-202502/: Cargo.toml
native/crates/backend-202502/src/: lib.rs
native/crates/backend-202510/: Cargo.toml
native/crates/backend-202510/src/: lib.rs
native/crates/backend-202607/: Cargo.toml
native/crates/backend-202607/src/: lib.rs
native/crates/backend-api/: Cargo.toml
native/crates/backend-api/src/: lib.rs
native/crates/backend-precsr-202210/: Cargo.toml
native/crates/backend-precsr-202210/src/: lib.rs
native/crates/ffi/: Cargo.toml
native/crates/ffi/src/: lib.rs
native/include/: rosu_pp_ffi.h
scripts/: build-universal.ps1
src/main/java/me/aloic/rosupp/: AlgorithmCapabilities.java  AlgorithmInfo.java  AlgorithmVersion.java  Beatmap.java  DifficultyRequest.java  DifficultyResult.java  GameMode.java  GradualDifficulty.java  GradualPerformance.java  Mods.java  NativeLibraryLoadException.java  NativePanicException.java  PerformanceRequest.java  PerformanceResult.java  RosuPp.java  RosuPpException.java  ScoreMode.java  ScoreState.java  UnsupportedOptionException.java
src/main/java/me/aloic/rosupp/internal/: NativeBridge.java  NativeLibraryLoader.java
src/test/java/me/aloic/rosupp/: DifficultyRequestTest.java  NativeIntegrationTest.java
