[package]
name = "backend-202411"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
backend-api.workspace = true
rosu_pp_202411 = { package = "rosu-pp", version = "=2.0.0" }
rosu_mods_202411 = { package = "rosu-mods", version = "=0.2.1", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
