[package]
name = "backend-202510"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
backend-api.workspace = true
rosu_pp_202510 = { package = "rosu-pp", version = "=4.0.1" }
rosu-mods.workspace = true
serde.workspace = true
serde_json.workspace = true
