[package]
name = "backend-202607"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
backend-api.workspace = true
rosu_pp_202607 = { package = "rosu-pp", git = "https://github.com/Apeuriox/rosu-pp.git", rev = "9a073d29611ef936b581a08d3c5b288ef5427301" }
rosu-mods.workspace = true
serde.workspace = true
serde_json.workspace = true
