[package]
name = "rosu-pp-ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "rosu_pp_ffi"
crate-type = ["cdylib", "rlib"]

[dependencies]
backend-api.workspace = true
backend-precsr-202210.workspace = true
backend-202411.workspace = true
backend-202502.workspace = true
backend-202510.workspace = true
backend-202607.workspace = true
